--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.5.7",
+    "@angular-devkit/build-angular": "^0.10.3",
     "@angular/cli": "^6.0.0-rc.1",
     "@angular/compiler-cli": "^6.0.0-rc.1",
     "@angular/language-service": "^6.0.0-rc.1",
@@ -49,7 +49,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
