--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/platform-browser": "^6.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.7.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^1.6.0",
     "react": "^16.4.1",
     "rxjs": "^6.2.2",
     "web-animations-js": "^2.3.1",
